# fastapi-playground

./: .gitignore  README.md  log.txt  pyproject.toml  ruff.toml
src/learn/: main.py
src/learn/ch_19/: router.py
src/learn/ch_20/: router.py
src/learn/ch_22/: router.py
src/learn/ch_23/: router.py
src/learn/ch_24/: router.py
src/learn/ch_25/: router.py
src/learn/ch_30/: router.py
src/learn/ch_33/: router.py
src/learn/ch_34/: router.py
src/learn/ch_35/: main.py  router.py
src/learn/ch_36/: main.py
src/learn/ch_37/: router.py
src/learn/docs/: README.md  main.py
src/learn/docs/ch_21/: router.py
src/learn/docs/ch_26/: router.py
src/learn/docs/ch_27/: router.py
src/learn/docs/ch_28/: router.py
src/learn/docs/ch_29/: router.py
src/learn/docs/ch_31/: router.py
src/learn/docs/ch_32/: router.py
src/learn/docs/ch_33/: router.py
src/learn/docs/ch_38/: dependencies.py  main.py
src/learn/docs/ch_38/routers/: items.py
src/learn/docs/ch_39/: router.py
src/learn/docs/ch_42/: main.py  test_main.py
src/learn/docs_adv/: README.md  main.py
src/learn/docs_adv/ch_01/: router.py
